--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-gspread==5.12.0
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
-pandas==2.1.4
-openpyxl==3.1.2
+Flask
+Flask-CORS
+gspread
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+pandas
+openpyxl
